sort cards before evaluation